--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				    		<a class="contacts-logo" href="skype:iam200888?chat" target="_blank"><img src="image/skype.png" class="mobile-phone-ico"></a>
 				    	</div>
 				    </div>	
-				    <div class="col col-lg-8 mb-2">
+				    <div class="col col-lg-8 mb-2 mb-md-0">
 					    <p class>Здравствуйте! Меня зовут <span class="h2">Ирина Малахова</span>, я носитель, преподаватель и переводчик немецкого языка с большим опытом работы и глубокими знаниями.</p>
 
 					    <p>Я выросла и училась в Германии, что позволило не только овладеть немецким языком в совершенстве, но и погрузиться в культуру и образ жизни страны. Cвободно владею как устным, так и письменным немецким языком, что позволяет мне эффективно общаться и объяснять материал.</p>
@@ -65,7 +65,7 @@
 	    		</div>
 				<div class="row mb-4">
 					<div class="col">
-				    	<h3 class="title-review mt-4 my-md-4 text-center text-md-start">Отзывы моих клиентов</h3>
+				    	<h3 class="title-review my-2 text-center text-md-start">Отзывы моих клиентов</h3>
 				    	<div class="review">
 				    		<img src="image/review.jpg" class="review-img" alt="Отзывы моих клиентов">
 				    	</div>
