--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-2 my-lg-3">
-				    	<h1>Преподаватель немецкого языка</h1>
+				    	<h1>Носитель немецкого языка</h1>
 					</div>
 				</div>
 				<div class="row light py-3 px-3">	
