--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<div class="contacts-container-bottom mb-5 text-center">
 				    	<a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-3"></a>
 				    	<a class="contacts-logo" href="https://t.me/iam200888" target="_blank"><img src="image/telegram.png" class="mobile-phone-ico me-4"></a>
-				    	<a class="contacts-logo" href="skype:iam200888?chat" target="_blank"><img src="image/skype.png" class="mobile-phone-ico"></a>
+				    	<!--a class="contacts-logo" href="skype:iam200888?chat" target="_blank"><img src="image/skype.png" class="mobile-phone-ico"></a-->
 				    </div>		
 	    		</div>
 				<div class="row my-4">
