--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				    	<a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-3"></a>
 				    	<a class="contacts-logo" href="https://t.me/iam200888" target="_blank"><img src="image/telegram.png" class="mobile-phone-ico me-4"></a>
 				    	<!--a class="contacts-logo" href="skype:iam200888?chat" target="_blank"><img src="image/skype.png" class="mobile-phone-ico"></a-->
+					<a class="contacts-logo" href="https://web.max.ru/4678575" target="_blank"><img src="image/Max.png" class="mobile-phone-ico"></a>
 				    </div>		
 	    		</div>
 				<div class="row my-4">
