--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				    	<div class="contacts-container">
 				    		<a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-4"></a>
 				    		<a class="contacts-logo" href="https://t.me/iam200888" target="_blank"><img src="image/telegram.png" class="mobile-phone-ico me-4"></a>	
-						<a class="contacts-logo" href="https://web.max.ru/4678575" target="_blank"><img src="image/Max.png" class="mobile-phone-ico"></a>
+							<a class="contacts-logo" href="https://web.max.ru/4678575" target="_blank"><img src="image/Max.png" class="mobile-phone-ico me-4"></a>
+							<a class="contacts-logo" href="#" target="_blank"><img src="image/yandex.png" class="mobile-phone-ico"></a>
 				    	</div>
 				    </div>	
 				    <div class="col col-lg-8 mb-0 mb-lg-4">
@@ -108,3 +109,4 @@
 
 
  
+
