--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<a class="contacts-logo" href="tel:89030151633"><img src="image/mobile-phone-ico.svg" class="mobile-phone-ico me-2">8(903)015-16-33</a>
 					</div>	
 					<div class="contacts-container-bottom mb-5 text-center">
-				    	<a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-3"></a>
+				    	<!--a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-3"></a-->
 				    	<a class="contacts-logo" href="https://t.me/iam200888" target="_blank"><img src="image/telegram.png" class="mobile-phone-ico me-4"></a>
 				    	<!--a class="contacts-logo" href="skype:iam200888?chat" target="_blank"><img src="image/skype.png" class="mobile-phone-ico"></a-->
 						<a class="contacts-logo" href="https://web.max.ru/4678575" target="_blank"><img src="image/Max.png" class="mobile-phone-ico me-4"></a>
@@ -110,6 +110,7 @@
 
 
  
+
 
 
 
