--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				    	<div class="contacts-container">
 				    		<!--a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-4"></a-->
 				    		<a class="contacts-logo" href="https://t.me/iam200888" target="_blank"><img src="image/telegram.png" class="mobile-phone-ico me-4"></a>	
-							<a class="contacts-logo" href="https://max.ru/126201237" target="_blank"><img src="image/Max.png" class="mobile-phone-ico me-4"></a>
+							<a class="contacts-logo" href="https://web.max.ru/126201237" target="_blank"><img src="image/Max.png" class="mobile-phone-ico me-4"></a>
 							<a class="contacts-logo" href="#" target="_blank"><img src="image/yandex.png" class="mobile-phone-ico"></a>
 				    	</div>
 				    </div>	
@@ -60,7 +60,7 @@
 				    	<!--a class="contacts-logo" href="https://wa.me/79030151633" target="_blank"><img src="image/whatsapp.png" class="mobile-phone-ico me-3"></a-->
 				    	<a class="contacts-logo" href="https://t.me/iam200888" target="_blank"><img src="image/telegram.png" class="mobile-phone-ico me-4"></a>
 				    	<!--a class="contacts-logo" href="skype:iam200888?chat" target="_blank"><img src="image/skype.png" class="mobile-phone-ico"></a-->
-						<a class="contacts-logo" href="https://max.ru/126201237" target="_blank"><img src="image/Max.png" class="mobile-phone-ico me-4"></a>
+						<a class="contacts-logo" href="https://web.max.ru/126201237" target="_blank"><img src="image/Max.png" class="mobile-phone-ico me-4"></a>
 						<a class="contacts-logo" href="#" target="_blank"><img src="image/yandex.png" class="mobile-phone-ico"></a>
 				    </div>		
 	    		</div>
@@ -110,6 +110,7 @@
 
 
  
+
 
 
 
